<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kim\'s Game</string>
    <string name="play_game">Play</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_medium">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="diff_expert">Expert</string>
    <string name="diff_impossible">Impossible</string>
    <string name="select_difficulty">Select Difficulty:</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
</resources>